--- a/.env.example
+++ b/.env.example
@@ -47,4 +47,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-ALPHAVANTAGE_API_KEY="likeanykeyisok"
+ALPHAVANTAGE_API_KEY="YOUR_API_KEY"
+IEXCLOUD_TOKEN="YOUR_TOKEN"
