add new data source

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ALPHAVANTAGE_API_KEY="YOUR_API_KEY"
 IEXCLOUD_TOKEN="YOUR_TOKEN"
+YF_URL="YOUR_URL"
