--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 ALPHAVANTAGE_API_KEY="YOUR_API_KEY"
 IEXCLOUD_TOKEN="YOUR_TOKEN"
 YF_URL="YOUR_URL"
+LOG_DISCORD_WEBHOOK_URL="YOUR_URL"
