--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "marvinlabs/laravel-discord-logger": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
