--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE="US/Eastern"
+APP_TIMEZONE="America/New_York"
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
