--- a/data_src/.devcontainer/devcontainer.json
+++ b/data_src/.devcontainer/devcontainer.json
@@ -5,6 +5,10 @@
   "dockerComposeFile": ["../../docker-compose.yml"],
   "service": "python-container-1",
 
+  // The optional 'workspaceFolder' property is the path VS Code should open by default when
+  // connected. This is typically a volume mount in .devcontainer/docker-compose.yml
+  "workspaceFolder": "/workspace",
+
   // Set *default* container specific settings.json values on container create.
   "settings": {
     "terminal.integrated.shell.linux": "/bin/bash",
@@ -35,6 +39,4 @@
 
   // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   "remoteUser": "vscode",
-  "workspaceFolder": "/workspace/data_src",
-  "shutdownAction": "none"
 }
