--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,66 @@
-version: '3'
-
+version: '3.7'
 services:
+  workspace:
+    build: ./web_src/.devcontainer/services/workspace
+    environment:
+      COMPOSER_MEMORY_LIMIT: -1
+    links:
+      - mysql
+      - redis
+      - python-container-1
+    volumes:
+     - ./web_src:/laravel
+     - ~/.ssh:/home/vscoder/.ssh:ro
+     - composer:/home/vscoder/.composer
+     - vs-code:/home/vscoder/.vscode-server
+  php-fpm:
+    build: ./web_src/.devcontainer/services/php-fpm
+    volumes:
+      - ./web_src:/laravel
+    depends_on:
+      - workspace
+  nginx:
+    build: ./web_src/.devcontainer/services/nginx
+    depends_on:
+      - php-fpm
+    volumes:
+      - ./web_src:/laravel
+    ports:
+      - 80:80
+  phpredmin:
+    image: sasanrose/phpredmin
+    environment:
+        - PHPREDMIN_DATABASE_REDIS_0_HOST=redis
+    ports:
+        - 8080:80
+    depends_on:
+        - redis
+  redis:
+      image: redis
+  mysql:
+    image: mysql:latest
+    environment:
+      MYSQL_USER: user
+      MYSQL_PASSWORD: user
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: default_schema
+    volumes:
+      - db-data:/var/lib/mysql
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    links:
+      - mysql
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+    restart: always
+    ports:
+      - 8183:80
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - 1025:1025 # smtp server
+      - 8025:8025 # web ui
   python-container-1:
     build:
       context: ./data_src/.devcontainer
@@ -12,3 +72,7 @@ services:
       - ./data_src:/workspace:cached
 
     command: /bin/sh -c "while sleep 1000; do :; done"
+volumes:
+  composer:
+  vs-code:
+  db-data:
