--- a/web_src/.devcontainer/devcontainer.json
+++ b/web_src/.devcontainer/devcontainer.json
@@ -5,8 +5,9 @@
     "remoteUser": "vscoder",
     "shutdownAction": "stopCompose",
     "workspaceFolder": "/laravel",
-    "dockerComposeFile": "docker-compose.yml",
+    "dockerComposeFile": "../../docker-compose.yml",
     "postCreateCommand": [
+        "mkdir -p /laravel/storage/",
         "sudo chown -R vscoder:vscoder /laravel",
         "sudo chown -R vscoder:vscoder /home/vscoder/",
         "chmod -R 777 /laravel/storage/",
