--- a/web_src/.env.example
+++ b/web_src/.env.example
@@ -1,18 +1,18 @@
-APP_NAME=Laravel
+APP_NAME=OhMyStock_Web
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://ohmystock.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ohmystock_test_db
+DB_USERNAME=test_user
+DB_PASSWORD=test_user_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,7 +22,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
