--- a/web_src/.devcontainer/services/nginx/default.conf
+++ b/web_src/.devcontainer/services/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name ohmystock.test;
     root /laravel/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
