--- a/data_src/requirements.txt
+++ b/data_src/requirements.txt
@@ -6,3 +6,24 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 pymongo==3.11.3
 Werkzeug==1.0.1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+Flask==1.1.2
+Flask-PyMongo==2.3.0
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+lxml==4.6.2
+MarkupSafe==1.1.1
+multitasking==0.0.9
+numpy==1.20.1
+pandas==1.2.2
+pymongo==3.11.3
+python-dateutil==2.8.1
+pytz==2021.1
+requests==2.25.1
+six==1.15.0
+urllib3==1.26.3
+Werkzeug==1.0.1
+yfinance==0.1.55
